# label-counter

./: .gitignore  README.md  pyproject.toml
label-counter/: __main__.py  index.py
