[tool.poetry]
name = "label-counter"
version = "0.1.0"
description = ""
authors = ["secchanu"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
nuitka = "^1.5.3"
pandas = "^1.5.3"
openpyxl = "^3.1.2"
black = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
